--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         /* General Styles */
         body {
             font-family: Arial, sans-serif;
-            background: url('Refreshing water.jpg') no-repeat center center fixed, #f0f0f0;
+            background: url('refreshing_water.jpg') no-repeat center center fixed, #f0f0f0;
             background-size: cover;
             color: #333;
             margin: 0;
